--- a/jenware.html
+++ b/jenware.html
@@ -23,6 +23,12 @@ body {
 
 
 /* link styles */
+
+a {
+    text-decoration: none;
+    border-bottom: 1px dotted;
+    padding-bottom: .1em;
+    }
 a:link {
     color: #C00;
   }
@@ -84,6 +90,7 @@ a:active {
 /* styles for the products section */
 
 #products {
+    border: double #FFBC53;
   background-color: #FFF;
   line-height: 1.5em;
     background-color: #fff;
@@ -100,6 +107,9 @@ a:active {
   font-size: 1em;
   text-transform: uppercase;
   color: #F26521;
+    border-top: 1px solid;
+    border-left: 3px solid;
+    padding-left: 1em;
 }
 
 /* styles for the testimonials box */
@@ -111,6 +121,7 @@ a:active {
   color: #633;
     padding: 1em;
     padding-left: 55px;
+    border-radius: 20px;
   }
   
 #testimonials h2 {
