--- a/jenware.html
+++ b/jenware.html
@@ -7,6 +7,7 @@
 body {
   font-family: Verdana, Geneva, sans-serif;
   font-size: 100%;
+    margin: 0;
 
 /* background gradient at top of page, from http://www.colorzilla.com/gradient-editor/ */
   background: -moz-linear-gradient(top,  #ffa853 0%, #fdf9bd 2%);
@@ -48,16 +49,19 @@ a:active {
 /* styles for the intro section */
 #intro {
 	text-align: center;
+    margin: 2em 0 1em;
 }
 #intro h2 {
 	font-size: 1.2em;
 	text-transform: uppercase;
 	letter-spacing: .2em;
 	color: #f26521;
+    margin-top: -10px;
 }
 #intro p {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-style: italic;
+    margin: 1em;
 }
 
 /* styles for navigation */
@@ -96,6 +100,7 @@ a:active {
     background-color: #fff;
     line-height: 1.5em;
     padding: 1em;
+    margin: 1em;
   }
 #products h2 {
   font-size: 1.2em;
@@ -110,6 +115,7 @@ a:active {
     border-top: 1px solid;
     border-left: 3px solid;
     padding-left: 1em;
+    margin-top: 2.5em;
 }
 
 /* styles for the testimonials box */
@@ -122,6 +128,7 @@ a:active {
     padding: 1em;
     padding-left: 55px;
     border-radius: 20px;
+    margin: 1em 10% 0 10%;
   }
   
 #testimonials h2 {
