--- a/jenware_ch15.html
+++ b/jenware_ch15.html
@@ -71,14 +71,28 @@ a:active {
 /* styles for navigation */
 #nav {
 	background-color: #751c54;
+    overflow: hidden;
+    width: 100%;
 }
 #nav ul {
 	list-style:none;
+    list-style-type: none;
+    padding: 0;
+    margin: 0 auto;
+    width: 19.5em;
 } 
 #nav ul li {
 	font-weight: normal;
     text-transform: uppercase;
+    float: left;
 }
+#nav ul li a {
+    display: block;
+    padding: .5em;
+    border: 1px solid #ba89a8;
+    border-radius: .5em;
+    margin: .25em;
+    }
 #nav ul a:link {
     color: #fff;
   }
@@ -86,10 +100,12 @@ a:active {
     color: #fff;
   }
 #nav ul a:focus {
-	color:#FC6
+	color:#FC6;
+    border-color: #fff;
 }
 #nav ul a:hover {
     color: #fc6;
+    border-color: #fff;
   }
 #nav ul a:active {
 	color:#F00;
@@ -105,6 +121,8 @@ a:active {
   margin: 1em;
     float: left;
     margin: 0 6px 6px 0;
+    clear: both;
+    overflow: hidden;
   }
 
 #products h2 {
