--- a/jenware_ch15.html
+++ b/jenware_ch15.html
@@ -116,10 +116,11 @@ a:active {
 #products {
   background-color: #FFF;
   line-height: 1.5em;
-  padding: 1em;
+  padding: 1em 2%;
   border: double #FFBC53;
-  margin: 1em;
+  margin: 0 2% 1em;
     float: left;
+    width: 55%;
     margin: 0 6px 6px 0;
     clear: both;
     overflow: hidden;
@@ -128,9 +129,10 @@ a:active {
 #products h2 {
   font-size: 1.2em;
   color: #ac267b;
-  text-align: center;
+  text-align: left;
   text-transform: uppercase;
   }
+    
 #products h3 {
   font-size: 1em;
   text-transform: uppercase;
@@ -156,7 +158,7 @@ a:active {
   padding-left: 55px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  margin: 1em 10%;
+  margin: 1em 2% 1em 64%;
   }
   
 #testimonials h2 {
@@ -177,6 +179,7 @@ p#copyright {
   color:#663333; 
   font-size: .8em;
   text-align: center;
+    clear: left;
   }
 
 
