--- a/jenware_ch15.html
+++ b/jenware_ch15.html
@@ -118,7 +118,7 @@ a:active {
   line-height: 1.5em;
   padding: 1em 2%;
   border: double #FFBC53;
-  margin: 0 2% 1em;
+  margin: 1em 20.5em 1em 1em;
     float: left;
     width: 55%;
     margin: 0 6px 6px 0;
@@ -158,7 +158,11 @@ a:active {
   padding-left: 55px;
   -moz-border-radius: 20px;
   border-radius: 20px;
-  margin: 1em 2% 1em 64%;
+  margin: 0 1em;
+    position:absolute;
+    top:0;
+    right:0;
+    width:14em;
   }
   
 #testimonials h2 {
@@ -168,6 +172,15 @@ a:active {
   letter-spacing: 3px;
   }
 
+#award {
+        position: absolute;
+        top: 35px;
+        left: 25px;
+    }
+
+    #content {
+        position: relative;
+    }
 
 /* miscellaneous styles */
   
@@ -208,6 +221,8 @@ p#copyright {
 </ul>
 </div>
 
+    
+
 <div id="content">
 <div id="products">
   <h2>New Products</h2>
@@ -232,6 +247,10 @@ p#copyright {
 </div>
 <p>&nbsp;</p>
 <p id="copyright">All content copyright &copy; Jennifer Robbins and Jenware, Inc. </p>
+
+<div id="award">
+    <img src="images/awesomesite.gif" alt="awesome site of the week">
+    </div>
 
 </div><!-- end #content -->
 </body>
